--- a/Project-6/index.html
+++ b/Project-6/index.html
@@ -1,42 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-       <nav class="container">
+      <nav class="container">
         <div class="logo">myTunes</div>
         <div class="menu_navbar">
-            <ul>
-                <li><a href="#">Overview</a></li>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">Gift Card</a></li>
-            </ul>
+          <ul>
+            <li><a href="Overview">Overview</a></li>
+            <li><a href="Music">Music</a></li>
+            <li><a href="Video">Video</a></li>
+            <li><a href="Gift Card">Gift Card</a></li>
+          </ul>
         </div>
-       </nav>
+      </nav>
     </header>
 
     <!-- hero section -->
 
-    <section class="hero_section">
+    <main>
+      <section class="hero_section">
         <div class="container">
-            <img src="images/hero_image.png" class="hero_image" alt="">
-            <div class="hero_text">
-                <h1>myTunes</h1>
-                <h3>Your music, movies, and TV shows take center stage.</h3>
-                <p>
-                    myTunes is the best way to organize and enjoy the music, movies, and
-                    TV shows you already have — and shop for the ones you want. Enjoy
-                    all the entertainment myTunes has to offer on your Mac and PC.
-                  </p>
+          <img src="images/hero_image.png" class="hero_image" alt="" />
+          <div class="hero_text">
+            <h1>myTunes</h1>
+            <h3>Your music, movies, and TV shows take center stage.</h3>
+            <p>
+              myTunes is the best way to organize and enjoy the music, movies,
+              and TV shows you already have — and shop for the ones you want.
+              Enjoy all the entertainment myTunes has to offer on your Mac and
+              PC.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="music-section" id="Music">
+        <div class="container">
+          <h2>
+            <span><i class="fa-solid fa-music"></i></span>
+            Music
+          </h2>
+          <h3>45 million songs. Zero ads</h3>
+          <h4>
+            Stream over 45 million songs, ad-free. Or download albums and tracks
+            to listen to offline. All the music in your personal myTunes library
+            — no matter where it came from — lives right alongside the Orange
+            Music catalog. Start your free three-month trial with no commitment,
+            and cancel anytime.
+          </h4>
+
+          <button class="trial-btn">Start Your Trial Now</button>
+
+          <p>
+            Orange Music is available in myTunes, and for iOS and Android
+            devices.
+          </p>
+          <div class="ipad-phone-img">
+            <img src="images/ipad-iphone.png" alt="iphone image" />
+          </div>
+        </div>
+      </section>
+
+      <section class="about-music">
+        <div class="container">
+          <h3>The movie and TV collection you always wished for. Granted.</h3>
+          <p>
+            With over 100,000 movies and TV shows to choose from, there’s always
+            something great to watch on myTunes and if you watch on Orange TV
+            4K, you’ll be able to enjoy a tremendous selection of your favorite
+            content in 4K HDR. So get ready to enjoy episodes of your favorite
+            TV shows or hit movies you’ve been waiting to see — anytime,
+            anywhere. Just tap to play, or even download if you’re going
+            somewhere you won’t have Wi-Fi.
+          </p>
+          <button class="secondary-btn">Read more</button>
+
+          <div class="mac-image">
+            <img src="images/mac.png" alt="mac" />
+          </div>
+        </div>
+      </section>
+
+      <section class="video-section" id="Video">
+        <div class="container">
+          <h3>A world of entertainment. Available wherever you are.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo
+            non velit repellat alias saepe inventore repellendus? Molestias
+            suscipit eos tempora? Quae quaerat cumque in veritatis impedit
+            dolorum sapiente recusandae minima quo aperiam quam, excepturi quasi
+            totam ad quas? Ipsam laudantium soluta delectus!
+          </p>
+        </div>
+      </section>
+
+      <section class="gift-section" id="gift-cards">
+        <div class="container">
+        <div class="gift-card-img">
+          <img src="images/gift_card.png" alt="card" />
+        </div>
+        <div class="gift-card-text">
+          <h3>Gift Card</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            eligendi corrupti, delectus excepturi sint itaque unde asperiores
+            numquam, dolore voluptates iure beatae, impedit dicta molestias!
+            Autem magnam porro quod voluptatibus cumque alias sunt, dolorum
+            dicta nisi at nam eius nulla optio non esse earum! Dignissimos
+            reprehenderit ab corporis accusantium ipsa!
+          </p>
+          <hr>
+          <button class="secondary-btn">Redeem</button>
+        </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+        <div class="upper-footer">
+            <div class="container">
+                <div class="footer-links">
+                    <h4>Shop & Learn</h4>
+                    <ul>
+                      <li>Music</li>
+                      <li>Movies</li>
+                      <li>Shows</li>
+                      <li>Apps</li>
+                      <li>Gift Cards</li>
+                    </ul>
+                  </div>
+                  <div class="footer-links">
+                    <h4>Orange Store</h4>
+                    <ul>
+                      <li>Find a Store</li>
+                      <li>Today at Orange</li>
+                      <li>Financing</li>
+                      <li>Orange Camp</li>
+                      <li>Order Status</li>
+                    </ul>
+                  </div>
+                  <div class="footer-links">
+                    <h4>Education & Business</h4>
+                    <ul>
+                      <li>Orange & Education</li>
+                      <li>Shop for Collage</li>
+                      <li>Orange & Business</li>
+                      <li>Shop for Business</li>
+                      <li>Jobs</li>
+                    </ul>
+                  </div>
+                  <div class="footer-links">
+                    <h4>About Orange</h4>
+                    <ul>
+                      <li>Newsroom</li>
+                      <li>Orange Leadership</li>
+                      <li>Investors</li>
+                      <li>Envents</li>
+                      <li>Contact Orange</li>
+                    </ul>
+                  </div>
             </div>
         </div>
-    </section>
-
-</body>
+        <section class="footer-lower">
+            <div class="container">
+            <p>Copyright © 2022 Do Some Coding</p>
+        </div>
+          </section>
+    </footer>
+  </body>
 </html>
